<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Chaotika</string>
    <string name="title_activity_main">Chaotika</string>
    <string name="package_name">ru.chaotika.app</string>
    <string name="custom_url_scheme">ru.chaotika.app</string>
    <string name="push_notification_channel_id">chaotika-general</string>
    <string name="planner_today_widget_name">Все задачи</string>
    <string name="planner_today_widget_title">Все задачи</string>
    <string name="planner_today_widget_description">Краткий список задач Chaotika.</string>
    <string name="planner_widget_add_task_content_description">Добавить задачу</string>
    <string name="planner_widget_refresh_content_description">Обновить данные</string>
    <string name="planner_widget_complete_task_content_description">Отметить выполненной: %1$s</string>
    <string name="planner_widget_configuration_done">Готово</string>
    <string name="planner_widget_configuration_opacity">Непрозрачность фона</string>
    <string name="planner_widget_configuration_read_only">Только просмотр</string>
    <string name="planner_widget_configuration_show_cleaning">Показывать задачи уборки</string>
    <string name="planner_widget_configuration_show_self_care">Показывать заботу</string>
    <string name="planner_widget_configuration_title">Настройки виджета</string>
    <string name="planner_widget_done_summary">%1$d/%2$d выполнено</string>
    <string name="planner_widget_empty_today">Активных задач нет.</string>
    <string name="planner_widget_no_snapshot_empty">Нажмите обновить или откройте Chaotika.</string>
    <string name="planner_widget_no_snapshot_summary">Ждет данных из приложения</string>
    <string name="planner_widget_no_today_tasks">Сегодня без задач</string>
    <string name="planner_widget_overdue_task">Требует внимания: %1$s</string>
    <string name="planner_widget_preview_date">сегодня</string>
    <string name="planner_widget_stale_empty">Нажмите обновить, чтобы загрузить задачи.</string>
    <string name="planner_widget_stale_summary">Данные за прошлый день</string>
    <string name="planner_widget_stale_title">Нужно обновить</string>
    <string name="planner_widget_timed_task">%1$s  %2$s</string>
    <string name="planner_timeline_widget_description">Таймлайн задач Chaotika на сегодня.</string>
    <string name="planner_timeline_widget_empty">Нет задач с временем.</string>
    <string name="planner_timeline_widget_name">Таймлайн задач</string>
    <string name="planner_timeline_widget_no_time">Без времени</string>
    <string name="planner_timeline_widget_title">Таймлайн</string>
    <string name="planner_voice_notification_channel_description">Локальное ожидание фразы активации голосового помощника.</string>
    <string name="planner_voice_notification_channel_name">Голосовой помощник</string>
    <string name="planner_voice_notification_debug_action">Диагностика</string>
    <string name="planner_voice_notification_error">Ошибка распознавания. Перезапускаю локальное ожидание.</string>
    <string name="planner_voice_notification_listening">Жду фразу «Хаотика».</string>
    <string name="planner_voice_overlay_listening">Слушаю</string>
    <string name="planner_voice_notification_ready">Команда готова к подтверждению.</string>
    <string name="planner_voice_notification_recording">Слушаю короткую команду.</string>
    <string name="planner_voice_notification_reviewing">Оцените срабатывание wake-фразы.</string>
    <string name="planner_voice_notification_transcribing">Распознаю команду.</string>
    <string name="planner_voice_notification_stop_action">Стоп</string>
    <string name="planner_voice_notification_test_action">Тест</string>
    <string name="planner_voice_notification_title">Голосовой помощник Chaotika</string>
    <string name="planner_voice_notification_training_action">Примеры</string>
    <plurals name="planner_widget_more_tasks">
        <item quantity="one">+%1$d еще в приложении</item>
        <item quantity="few">+%1$d еще в приложении</item>
        <item quantity="many">+%1$d еще в приложении</item>
        <item quantity="other">+%1$d еще в приложении</item>
    </plurals>
    <plurals name="planner_widget_overdue_summary">
        <item quantity="one">%1$d требует внимания</item>
        <item quantity="few">%1$d требуют внимания</item>
        <item quantity="many">%1$d требуют внимания</item>
        <item quantity="other">%1$d требуют внимания</item>
    </plurals>
</resources>
