<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/planner_timeline_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/planner_widget_background_85"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/planner_timeline_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/planner_timeline_widget_title"
                android:textColor="@color/planner_widget_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/planner_timeline_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/planner_widget_preview_date"
                android:textColor="@color/planner_widget_text_soft"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/planner_timeline_add_button"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/planner_widget_control_background"
            android:contentDescription="@string/planner_widget_add_task_content_description"
            android:padding="9dp"
            android:scaleType="center"
            android:src="@drawable/planner_widget_icon_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/planner_timeline_task_row_1"
        style="@style/PlannerTimelineTaskRow"
        android:layout_marginTop="14dp">
        <ImageView android:id="@+id/planner_timeline_task_icon_1" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_1" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_1" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_1" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_2" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_2" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_2" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_2" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_2" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_3" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_3" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_3" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_3" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_3" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_4" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_4" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_4" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_4" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_4" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_5" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_5" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_5" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_5" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_5" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_6" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_6" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_6" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_6" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_6" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_7" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_7" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_7" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_7" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_7" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <LinearLayout android:id="@+id/planner_timeline_task_row_8" style="@style/PlannerTimelineTaskRow">
        <ImageView android:id="@+id/planner_timeline_task_icon_8" style="@style/PlannerTimelineTaskIcon" />
        <LinearLayout style="@style/PlannerTimelineTaskCopy">
            <TextView android:id="@+id/planner_timeline_task_time_8" style="@style/PlannerTimelineTaskTime" />
            <TextView android:id="@+id/planner_timeline_task_title_8" style="@style/PlannerTimelineTaskTitle" />
        </LinearLayout>
        <ImageView android:id="@+id/planner_timeline_task_checkbox_8" style="@style/PlannerWidgetTaskCheckbox" />
    </LinearLayout>

    <TextView
        android:id="@+id/planner_timeline_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/planner_timeline_widget_empty"
        android:textColor="@color/planner_widget_text_soft"
        android:textSize="15sp" />
</LinearLayout>
